<resources>
    <string name="app_name">Par ou Ímpar</string>
    <string name="par">Par</string>
    <string name="impar">Ímpar</string>
    <string name="selecione">Selecione uma opção:</string>
    <string name="jogada">Selecione sua jogada:</string>
    <string name="resultado">Resultado:</string>
    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4 </string>
    <string name="cinco">5</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="jogada_do_computador">Jogada do Computador:</string>
    <string name="mostrar_op_es">Mostrar Opções</string>
</resources>